--- a/Face_recognition.ipynb
+++ b/Face_recognition.ipynb
@@ -4,7 +4,7 @@ import pyttsx3
 reference_images = [
     r"C:\Users\lenovo\OneDrive\Desktop\New folder\CAS\r.jpg"]
 reference_names = [
-    "RamaKrishna"
+    "RamaKrishn"
 ]
 # Initialize an empty list for reference encodings
 reference_encodings = []
